Überarbeitete Struktur